gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mcp-gateway
  namespace: mcp-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: mcp
      hostname: "mcp.apps.ocp.2xwfq.sandbox4043.opentlc.com"
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: mcps
      hostname: "*.mcp.local"
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
