route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mcp-gateway
  namespace: mcp-gateway
spec:
  host: "mcp.apps.ocp.2xwfq.sandbox4043.opentlc.com"
  to:
    kind: Service
    name: mcp-gateway-istio
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
